versioned_docs/version-1.1.2/changelog/index.mdx
---
title: "更新日志"
sidebar_position: 1
---
## RMTv1.2更新内容
> 兔子要和生活对线，期待开发者提交PR完善下面的内容

### 待优化
指令录制表现需要增强
菜单宏八个按钮太丑了，需要搞成8个按钮围成车轮那样
路径需要支持作为变量可实时替换
搜索图片路径不再使用随机数，使用自增数字，且指令界面要显示图片路径
路径相关优化（若不存在则弹窗进行选择）
软件目前打开编辑窗口会盖住下方窗口，层数多了很乱不知道那个是哪个
（主界面打开宏编辑器时：主界面左移一半，宏编辑器中间打开）
（宏编辑器打开指令编辑器时，宏编辑器向左上移动，指令编辑器中间打开）
（指令编辑器打开新的编辑窗口，指令编辑器移动到左下，新编辑器中间打开）
（如上，感觉编辑起来会方便很多）
主界面新增复制按钮

### 待更新
快捷键可以任意选择组合（特别是手柄需要支持）
增加双击触发类型（虽然字串宏也能做到，但是ctrl这种做不到）
新增窗口管理指令（控制窗口置顶，窗口关闭，窗口显示，窗口移动等等）
配置合并（这样案例就可以作为通用模版，效果会增强）
语音宏（通过语言内容触发）
界面宏（特定界面添加常驻按钮，点击触发宏）
yolo（等yun完善，想看看这玩意到底是什么）

### 待删除
共享复制

---

## RMTv1.1.2更新

### 优化
窗口信息编辑变量下拉内容优化
更新日志改成倒序

### 修复
如果Pro分支添加报错
变量自动去除空格问题
读取Excel空内容报错问题
Excel读取区域异常问题
表达式空值运算问题
如果Pro报错问题
进程名获取报错问题
窗口信息使用句柄变量报错
变量提取后调试报错

---

## RMTv1.1更新内容

### 新增
软件打开支持-min参数
运算增加取余操作
RMT指令新增窗口相关指令
新增数组指令（支持二维数组）
支持设置调试起点
新增输入指令
输出文本文件可指定文件编码
手柄从vjoy改成ViGEm
增加亮度调整按键
新增SC截图类型
前台|窗口信息增加句柄绑定
搜索pro支持窗口搜索图片、颜色、文本
变量增加句柄ID选项
如果增加正则表达式比较类型
变量提取支持窗口
增加颜色实时变量
新增文件读写指令
新增离线帮助说明文档
如果指令新增流程控制

### 优化
item采用无尽列表刷新方式，让软件不再卡顿
优化指令编号问题
多语言问题优化
软件部分排版问题优化
系统托盘休眠中文化
优化配置导入速度
调整前台检测逻辑
变量名规范化
调整间隔变量兼容处理时机
取色器优化，解决左下角，右上角，右下角无法取色问题
按键指令_按键名_动作类型改成中文
优化默认变量名Num改成Var
变量、运算、宏操作添加默认备注
搜索pro，变量提取支持坐标
指令简化 形如搜索_Search1234_备注 => 搜索1234_备注
优化运算对浮点数的处理
循环次数重复
优化如果编辑器
运算指令优化
RMT指令优化
文本处理指令重构
重构宏操作指令
按键编辑提示优化
跳过指令可以编辑
优化导入功能
变量提取，提取文本编辑增加说明
文本处理处理参数提示文本优化
文本处理新增特定变量制表符
浮动数值保存检测
特别感谢信息调整
开发文档完善，辅助其他的人使用源码
定时宏采用Schedule和小顶堆处理
取消音频文件的绑定，支持替换Start和End音频
优化变量提取指令（空格处理）
更新图标调整指令顺序
变量提取-提取文本编辑优化
输入时交互 回车按键 默认真值或继续
输入时交互 ESC按键 默认假值或取消
按键编辑界面优化
按键替换编辑界面优化
触发按键编辑界面优化
优化主界面刷新逻辑，减少卡顿
主界面下划线位置调整
优化后台按键编辑界面
优化指令窗口-增加颜色状态
变量监视器窗口可动态调整-但是没有记录大小
罗技鼠标没有鼠标按键按AHK模式处理
指令更加防呆设计（空格和Tab判断）
OpenCV模型升级至4.8.1
终止所有用时，关闭菜单按钮
变量监视器大小，置顶状态保存
搜索pro无限次数时，假分支置灰
初始化错误提供更多信息，辅助排查
搜索Pro颜色支持变量
优化变量相关内容
RMT指令优化
输出指令支持数组
多语言完善
编辑界面右侧增加按钮图标
部分指令编辑界面优化
按键逻辑优化（按下时按下增加选项）
流程控制编辑器界面优化显示
录制选项细化-鼠标关键点位选项
截图快捷键->Alt+F1
自由贴快捷键->Alt+F2
托盘显示软件版本以及管理员权限

### 修复
按键编辑器关闭后F1快捷键没有关闭问题
关闭变量监听窗口，宏指令编辑器勾选状态异常问题
变量提取会去除空格问题
后台鼠标中键和右键错位问题
如果Pro完全复制报错问题
搜索两个真值
按键被屏蔽问题
指令窗口颜色背景颜色设置无效问题
提示音多次触发软件闪退
重命名打开菜单轮失去焦点（第一次打开仍然无效）
循环次数重复
菜单轮线条闪烁问题
英文模式下无法调试问题
说明文档换行问题
删除如果pro分支指令异常
如果等于不能用于字符比较
文本提取空格式无效问题
完全复制引用异常问题处理
指令窗口不跟随问题
指令上下移动，分支不会调整问题
禁用模块定时仍然生效
配置导入无效
运算只对第一个编辑生效问题
输出弹窗无法显示_,\{,}符号问题
调试标识影响指令执行问题
输入excel内容自动关闭excel文件问题
excel输入二维数组异常问题
编辑器文本状态无法录制指令问题
快捷键无法改成热字串问题
录制快捷键单个按键时，无法关闭录制状态问题
字串宏清除后保存报错问题
输入交互取消无效问题
开启自启偶尔弹窗问题
后台按键应用保存错误问题
应用保存对象池清除错误
按键替换1~8无效问题
开机自启最小化问题
关闭RMT残留work问题处理
部分取色后提示错误
选择图片时复制问题
F5版本rmt无法导入问题
任务计划程序运行没有托盘图标问题
变量提取问题
第二个指令上移问题
松止时松开其他按键问题
后台按键保存报错问题
数据越界问题
输入保存选框状态问题
运算表达式校验修复
如果Pro，循环指令完全复制问题
输出excel关闭问题
Excel读取保存问题
输入指令变量问题
输出指令保存问题
Excel写入保存提示问题
滑动条问题修复
文件读写下拉框显示问题修复
宏编辑界面关闭后异常刷新问题
非如果pro提示流程控制报错问题

### 删除
输入指令-文本文件、Excel
输出指令-文本文件、Excel
删除变量存在则忽略（只保留变量指令中该选项）
工具->截图和自由贴 展示删除

---

## RMTv1.0.9 更新内容

### 新增
分割线开关选项
宏编辑器新增编辑模式【逻辑树，文本】
逻辑树真假节点双击可以直接编辑
配置管理新增直接打开操作说明文档
宏新增提示音选项
新增变量监视器
新增循环指令
新增如果Pro指令
逻辑树增加上下移动指令功能
配置迁移
新增共享上传功能
新增逻辑按键类型
变量监视器新增双击修改值操作
增加多语言-中文/英语选项
进程通信增加回包检测机制
新增逻辑树-跳过指令/取消跳过
按键宏触发键按钮右键 可自定义触发按键
RMT指令-开启/关闭变量监视
新增使用说明编辑器
编辑器支持多窗口
编辑器增加工具菜单栏
(变量监视器，指令窗口)
编辑器增加调试菜单栏
(运行，单步运行，终止)
搜索pro增加窗口规格选项
移动Pro增加窗口规格选项
编辑器新增delete快捷删除操作
编辑器新增窗口置顶选项

### 优化
调整主界面宏配置布局
共享配置网址调整
宏操作-插入操作，可以自定义插入次数
编辑窗口标题自适应显示文本
优化修正功能，支持修正兼容适配问题
调整字串宏的选项文本
优化指令状态传递方式
多线程设置优化(0~10且自动生成对应的work)
搜索编辑器打开时检查图片路径，提醒使用配置校准功能修复问题
开关 打开菜单宏 第一次打开 第二次关闭
备注文本优化，防止影响指令
优化循环次数变量下拉出现时机
优化通信，避免重复处理指令
部分指令去除下拉内部变量,减少干扰变量
变量监视器在保存后根据上次状态自动打开
指令监视器双击时显示当前数值
优化罗技按键初始化问题
优化导入配置存在弹窗的字体
优化配置迁移操作
优化共享上传操作流程
指令通讯方式优化
优化搜索Pro选择图片功能,适配导出导入
优化变量指令实现方式
优化循环次数的显示文本
指令手册-增加循环，如果Pro指令说明
优化指令显示窗口
配置序列号增加至七位（6位+随机数）
前台信息编辑器功能简化（去除不必要的快捷键）
编辑器Debug时清空指令窗口
编辑器Debug结束弹窗置顶
编辑器Delete快捷键优化
RMT指令编辑器默认显示10个选项
变量提取指令编辑器优化
变量提取，最多提取变量增加至6个
优化搜索Pro编辑器**

### 修复
按键`1~8`触发按键无法屏蔽问题
终止所有宏无法终止子宏问题
加载配置/导入配置不显示窗口问题
宏配置上下移动，宏指令没有移动问题
文本模式下无法添加指令问题
配置太多导入异常问题
语音提示配置报错问题
多线程交互过快，信息丢失问题
如果pro功能没有实装问题
剪切板提取变量多换行符问题
共享上传临时文件删除报错问题
多屏重载后软件窗口位置重置问题
宏操作指令响应延迟问题
循环-如果Pro中创建变量不会出现在下拉框问题
罗技按键终止没有松开按键问题
模块中删除所有宏后，宏Label遗留问题
配置重命名后路径没有修复问题
编辑器指令窗口没有显示指令问题
使用说明添加图片报错问题
菜单按钮快捷键没有屏蔽问题
运行次数保存问题
Debug弹窗问题
间隔变量时间异常问题
多语言同步问题
多宏编辑器窗口报错
按键编辑器，点击模拟按钮报错问题
按键1~8触发按键触发异常问题
跳过指令完全复制报错问题

### 删除功能
运行后显示窗口
按键指令编辑器去掉按键模式选项
指令窗口删除指令个数配置项

---

## RMTv1.0.8 更新内容

### 新增：
优化滑动组件
新增配置分组功能
新增分组禁用功能
宏编辑器右键新增完全复制选择
增加背景色选项(不怎么好用，还不如不用)
新增定位取色器，移动或搜索颜色指令点位编辑优化
RMT指令：新增关闭软件类型
定时宏：新增软件启动时触发
特别感谢页签增加
帮助页签增加视频合集链接
宏模块增加前台功能
指令编辑器增加指令的图标
新增菜单宏
新增后台按键指令
菜单宏增加出现位置选项
新增配置导出，导入功能
新增配置共享链接
移动Pro新增鼠标动作类型：移动，点击1次，点击2次
输出指令新增：输出到文本文件，输出到Excel表格

### 优化：
优化指令录制结果
变量提取：支持提取所有文本信息
变量提取：不存在变量时创建默认值0的变量
如果：判断字符包含时右边可以直接使用字符
输出：新增指令窗口选项
搜索Pro：UI微调整
定时：前台判断增加保护
浮动值：可以通过+-控制浮动方向
优化软件保存后重新打开的位置
按键宏：支持相同触发键配置不同的宏
按键宏长按触发优化
自由贴可以用滚轮缩放
提供多种默认字体，都不存在时选择字库第一个字体
微软截图时增加自动框选范围
RMT截图状态增加提示
创建变量增加规范提醒
录制操作去除触发录制的快捷按键
分支指令默认显示真假分支
真假分支右键增加'添加指令'
宏操作去掉默认备注功能
全局快捷键输出到指令窗口
问题及应对措施添加案例
调整界面窗口大小
打赏功能调整（赞助太少，活不起了）
禁用键鼠，启动键鼠多线程也可以正常使用
按键，触发键编辑器增加勾选背景色
按键指令可以勾选任意选项
后台指令保留窗口信息缓存
提取变量增加\{变量名}功能
完善菜单宏的触发方式
路径修正功能进一步完善
菜单宏界面鼠标移动超过160px根据角度触发对应按钮
优化配置导入，导出操作
优化输出指令
菜单宏增加数字按键触发**

### 修复：
修复移动速度100时编辑指令速度90问题
弹窗指令bug修复
修复应用保存报错
修复新增配置报错
修复移动pro完全复制bug
修复嵌套逻辑完全复制报错
修复快捷键编辑异常问题
修复折叠框初始状态异常问题
修复设置滑动条异常问题
修复删除模块是界面UI位置偏移问题
修复Win按键长按触发异常检测问题
修复多修饰组合键长按触发问题
修复粘贴分支逻辑是显示错误
修复按键_F20_3_100指令双击编辑报错问题
修复未勾选"运行后显示窗口"，应用、重载后界面不显示问题
修复按键替换功能屏蔽问题
修复前台相关问题
修复前台信息报错后，溢出问题
修复菜单轮显示获取焦点，导致指令输出到菜单轮问题
修复菜单轮非100%屏幕缩放显示异常问题
修复配置重命名bug
修复定式宏，停止时间后触发问题
修复按键替换前台问题
修复自增导入配置异常问题
修复备注文本溢出问题
修复导入兼容问题
调整字串宏长度提示

---

## RMT v1.0.7 更新内容

### 新增
无变量提醒选项
变量提取指令（从之前的变量指令摘出来）
新增全局变量
搜索Pro文本搜索支持文本变量
新增软件截图选项
触发键编辑界面新增键盘监听输入
新增截图功能，新增自由贴功能
新增配置管理功能能
新增字体选项
新增定时宏
新增指令显示开关
新增RMT指令 
   "截图", "截图提取文本", "自由贴","开启指令显示", "关闭指令显示", 
   "启用键鼠", "禁用键鼠", "全局暂停", "终止所有宏", "重载"
新增上移下移功能
指令录制新增鼠标轨迹录制
按键指令新增组合键选项和按键监听
全局暂停功能
增加宏状态背景颜色标识
输出指令，增加弹窗，语音
宏操作新增暂停操作类型
宏指令编辑器可以右键复制，粘贴指令
指定进程改名前台：支持配置窗口标题，窗口类，窗口进程名
RMT指令新增暂停所有宏、恢复所有宏类别
增加指令手册说明文档

### 优化
优化间隔指令，可以使用变量设置时间
优化间隔、移动Pro、运算指令
优化变量、变量提取、运算、如果指令
调整默认快捷键（改成更加生僻，以免不知道情况下误触发）
搜索界面UI简化，搜索Pro界面UI调整
变量提取不存在&x，&c增加提示反馈
变量提取执行测试指令，可提示变量截取结果
搜索指令：搜索次数支持无限搜索
优化宏指令编辑器
优化编辑器变量下拉预选
优化开关触发模式
删除并联模式
指令录制改成串联
指令录制选项优化
删除记录窗口默认位置功能
指令显示有注释时去掉标识符号
子宏，终止宏合并为宏操作指令
定时宏优化触发时间点
搜索颜色： 取色时自动框选搜索范围
搜索图片：RMT截图时自动框选搜索范围
路径修正：修正因为导入别人配置路径不对的问题
帮助界面新增表格链接（bug文档，需求文档，使用备注）
界面UI布局调整优化
输出指令增加更多选项
文件指令改名运行执行，并优化相关功能
文本识别参数回调
修改游戏选项->下拉式 按键类型：虚拟/拟真
宏指令编辑器
宏指令编辑器新增双击编辑指令操作
搜索Pro界面UI调整
子宏增加默认备
调整默认的指令显示窗口配置
变量提取次数可以无限次
调整键鼠禁用指令提示文本
手柄录制适配新录制指令
快速上手文档内容更新
调整变量提取指令布局
优化vjoy初始化模块**
删除局部变量，只保留（宏循环次数）

### 修复
修复串联终止后指令无法再次生效问题
滑动滚轮，会莫名其妙导致一些宏变无限次和串联
开宏  全局终止宏   新增配置   点空白的地方报错
编辑器修改参数后，指令缓存导致编辑器模式执行指令异常
变量提取只有第一个宏生效问题
游戏模式下滚轮无效问题
框选范围结果异常问题
幂运算结果异常问题
子宏指令异常问题
指令显示窗口会获取焦点问题
子宏自己插入自己问题
串联多线程指令显示报错问题
终止宏
定时宏多个无法删除问题
快捷键显示问
变量创建提示错误问题
部分指令变量没有出现在变量下拉框
宏指令编辑器修改备注无法保存问题
软件运行时立马触发宏报错问题
快捷键显示问题
编辑器搜索指令修改后报错问题
宏操作指令序号显示异常问题
编辑器处理嵌套指令显示异常问题
多个自由贴无法关闭问题
上下进程名无法上下移动问题
暂停会吧休眠勾选上问题
多线程暂停功能异常
多线程输出语音和弹窗报错
录制轨迹时无法录制"/"按键问题
无限搜索时超过900次的报错问题（真无限）
内置变量没有拉取显示问题
定时宏默认配置点击报错问题
指令编辑器执行报错问题
新增配置是，上下移动异常问题
搜索坐标Y无法下拉选取变量问题
运算指令无法下拉选取变量问题
宏被子宏多次触发问题
宏终止卡键问题
宏操作调用自己问题
无权获取窗口信息时报错问题
xoutput中默认配置空问题
定时宏勾选结束时间异常问题

---

## RMT v1.0.6 更新内容

### 新增
指令录制新增手柄选项

### 优化
优化软件目录结构
优化设置显示快捷键文本
软件窗口宽度减少35px
调整【循环次数】UI位置（移动到比较靠前的位置）
调整【长按时间】UI位置（移动到触发键编辑界面）
优化宏信息保存：每个宏单独保存，不再拼接保存
如果手柄宏被其他软件屏蔽，可以运行joy目录下的Xoutput，【RMT虚拟手柄转Xbox手柄】点击开始

### 修复
修复滚动条无法使用滚轮滚动问题
修复滚动条拖拽界面UI重叠
修复手柄十字键触发相关问题

---

## RMT v1.0.5 更新内容

### 新增

免责申明：使用软件前需同意协议  
"如果"指令支持逻辑关系"或"  
内置变量：支持获取 X/Y 坐标与循环次数  
托盘图标状态区分（暂停状态下不同图标）
新增串联指令多线程功能
新增简单搜索指令，降低新手编辑门槛
搜索指令新增截图快捷键
增加后台鼠标指令

### 优化

快捷键修改逻辑  
按键反馈机制  
界面字体大小调整  
文本与变量提取功能格式优化  
文本提取快捷键默认设为 `Alt+U`
分支指令模式按宏指令的模式串联，并联
优化搜索框选功能提示
优化搜索鼠标动作参数设置
优化部分窗口排版
优化图片搜索功能（使用OpenCV接口）
优化文本识别功能（识别模型升级）
优化循序次数组件
优化图片搜索，图片一样只是有色差（黑色蒙版等），相似度99或100可以防止误触发
优化文本搜索的匹配方式，支持正则表达式（\d+ 这样就可以匹配任意整数了
工具可以获取窗口坐标
工具中增加窗口置顶选项，以便实时查看获取相关信息
后台鼠标增加滚轮操作
增加指令缓存，而不是每次都读取配置

### 修复

取消选择图片时报错  
快捷键修改 Bug  
滚轮与数字区回车无法录制  
组合键触发误触其他快捷键  
快捷键 `|` 修改为 `\`  
中文插入英文符号错误  
125% 缩放下文本重叠问题  
工具开关状态保存失败问题  
子宏设置后删除前序宏引起序号错误  
文本提取快捷键无法触发问题  
运算功能的表达式中出现括号后，退格报错
修复删除配置报错问题
修复点击指令录制内容重复问题
修复多线程vbs路径适配问题
修复移动指令速度100保存问题
修复搜索界面编辑指令，二次编辑指令为空问题
修复多线程暂停无效问题
修复多线程子宏暂停问题
修复子宏保存序号显示问题
修复暂停时，开关触发宏状态没有重置问题
修复子宏，终止操作宏报错问题
修复多线程子宏问题
子宏调用自己问题

---

## RMT v1.0.2~4 更新内容

新增指令执行模式：  
   - 现默认指令为**串联模式**（上个指令执行完才执行下个）  
   - 每次间隔可以设为 `0`，实现无缝衔接  
   - 录制指令仍为并联模式，以支持多键同时按下  
   - ⚠ 注意：录制时不适用于串联模式  
修复编辑指令时报错的问题  
修复指令并联无法保存的问题  
新增打赏功能  
优化文本识别与配置管理功能  

---

## RMT v1.0.0 更新内容

> 软件更名为 **RMT（若梦兔）**，原名 ButtonAssist 不易记忆

### 功能更新

新增宏触发类型：按下、松开、松止、开关、长按  
按键指令优化：支持点击、按下、松开  
移动指令简化  
新增移动 Pro 指令：支持更多参数与变量控制  
设置中新增坐标浮动功能：鼠标移动可随机浮动  
指令编辑器优化：支持右键编辑与快捷键录制  
文件功能：支持 MP3 后台播放  
搜索指令改为类存储结构（与旧版不兼容）

### 新增指令

输出指令：便于文本输入  
终止指令：中途退出宏执行  
子宏功能：子宏不依赖触发按键，可多次循环

### 进阶变量指令

支持变量存储运行时状态  
优化变量提取：可处理千位分隔数字（如 1,000,003）  
新增变量运算指令：变量可通过运算改变值  
新增"如果"指令：支持分支处理逻辑

### 后续优化方向

**搜索简化版指令**：当前参数过多，学习成本高  
**宏分享功能**：便于排查配置问题、快速复用  
**触发指令类型细分**：引入单线程与多线程选项，降低使用门槛

---

## ButtsonAssistv6.0.0 更新内容

搜索功能新增文本搜索类型  
搜索范围功能优化：按下 `F1` 后可以框选范围  
宏录制功能优化：可在设置中配置录制参数  
工具新增 OCR 图片识别提取文本功能  
简化指令语法：减少无意义参数  
新增比较指令：可提取变量进行运算与比较  
新增坐标指令：提取文本中的坐标并用于移动  
搜索图片支持软件内截图  
修复若干已知 Bug
